@@ -23,7 +23,7 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.18.8</version>
+            <version>1.18.22</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -160,8 +160,13 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.0</version>
                 <configuration>
-                    <release>12</release>
-                    <encoding>UTF-8</encoding>
+		  <source>12</source>
+                  <target>12</target>
+	          <encoding>UTF-8</encoding>
+		  <compilerArgs>
+		    <arg>--add-exports=java.base/jdk.internal.ref=ALL-UNNAMED</arg>
+		    <arg>--add-exports=java.base/sun.nio.ch=ALL-UNNAMED</arg>
+		  </compilerArgs>
                 </configuration>
             </plugin>
 
